trois cercles positionnés comme il faut

--- a/02-intro-d3/public/index.html
+++ b/02-intro-d3/public/index.html
@@ -6,6 +6,8 @@
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
 </head>
 <body>
+    <div class="cercles"></div>
+</body>
 
 
 </html>
