--- a/04-gapminder/public/index.html
+++ b/04-gapminder/public/index.html
@@ -1,67 +1,13 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Projet VisualDon 22 - Pokemon</title>
-    <script src="main.js"></script>
-  </head>
-  <body>
-
-    <header>
-      <h1>Logo</h1>
-      <span class="material-icons">face</span>
-    </header>
-
-    <main>
-      <body>
-        <section id="resume">
-          <div class="resume-wrapper">           
-          </div>
-        </section>
-        
-
-        <section id="attaque-defense hidden">
-          <div class="attaque-defence">            
-          </div>
-        </section>
-
-
-        <section id="forces-faiblesses hidden">
-          <div class="forces-faiblesses">
-
-          </div>
-        </section>
-
-
-        <section id="rapport-force-elements  hidden">
-            <div class="rapport-force-elements"></div>
-        </section>
-
-        <section id="pokemons-par-type hidden">
-          <div class="pokemons-par-type">
-
-          </div>
-        </section>
-
-        <section id="combat hidden">
-            <div class="combat"></div>
-        </section>
-      </body>
-    </main>
-    <footer>
-    </footer>
-  </body>
-</html>
-=======
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>03-d3-data</title>
+    <title>04-d3-data</title>
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
 </head>
 <body>
-
+  <svg class="graphique"></svg>
+  </body>
+  
 
 </html>
->>>>>>> 8807fcb144379733c1ff4b7607ee97e5d636cd3c
