données récupérées et apparition des graphiques trop haut

--- a/03-d3-data/public/index.html
+++ b/03-d3-data/public/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="rectangles">
-        <h2>Nombre de posts par utilisateur</h2>
+        <h2>Nombres de posts par utilisateur</h2>
     </div>
     <div class="user">
         <h2>Utilisateur avec le post le plus long</h2>
