tous les cercles avec infos sur les pays on hover

--- a/04-gapminder/public/index.html
+++ b/04-gapminder/public/index.html
@@ -6,6 +6,16 @@
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
 </head>
 <body>
+  <h1>Visualisation de données: ex 4</h1>
+  <section class="countryInfos">
+    <h2 class="countryNameInfo">Pays</h2>
+    <ul>
+    <li class="income">Revenu</li>
+    <li class="population">Population</li>
+    <li class="lifeExpectancy">Espérance de vie</li>
+  </ul>
+  </section>
+ 
   <svg class="graphique"></svg>
   </body>
   
