--- a/04-gapminder/public/index.html
+++ b/04-gapminder/public/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="../assets/img/favicon.ico">
 </head>
 <body>
-  <h1>Visualisation de données: ex 4</h1>
+  <h1>Visualisation de données: ex 4.1</h1>
   <section class="countryInfos">
     <h2 class="countryNameInfo">Pays</h2>
     <ul>
@@ -17,6 +17,7 @@
   </section>
  
   <svg class="graphique"></svg>
+  <a href="map.html"></button>
   </body>
   
 
